--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.4",
+    "@mui/x-charts": "^7.28.0",
     "@mui/x-data-grid": "^7.26.0",
     "@reduxjs/toolkit": "^2.5.1",
     "@types/react-router-dom": "^5.3.3",
