--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^6.4.4",
     "@mui/x-charts": "^7.28.0",
     "@mui/x-data-grid": "^7.26.0",
+    "@mui/x-date-pickers": "^7.28.2",
     "@reduxjs/toolkit": "^2.5.1",
     "@types/react-router-dom": "^5.3.3",
     "api": "^6.1.2",
