--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "api": "^6.1.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
